Start modeling next

--- a/student.ipynb
+++ b/student.ipynb
@@ -20819,8 +20819,21 @@
     "# Model\n",
     "***\n",
     "\n",
-    "Input formula for multiple linear regression, explain linear regression and multivariate linear regression"
+    "Input formula for multiple linear regression, explain linear regression and multivariate linear regression\n",
+    "\n",
+    "When thinking of lines and slopes statistically, slope parameters associated with a particular predictor $x_i$ are often denoted by $\\beta_i$. Extending this example mathematically, you would write a multiple linear regression model as follows:\n",
+    "\n",
+    "$$ \\hat y = \\hat\\beta_0 + \\hat\\beta_1 x_1 + \\hat\\beta_2 x_2 +\\ldots + \\hat\\beta_n x_n $$ \n",
+    "\n",
+    "where $n$ is the number of predictors, $\\beta_0$ is the intercept, and $\\hat y$ is the so-called \"fitted line\" or the predicted value associated with the dependent variable."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
