--- a/student.ipynb
+++ b/student.ipynb
@@ -4356,7 +4356,7 @@
    "outputs": [],
    "source": [
     "# Use API key to gain access to gmaps functionality\n",
-    "gmaps.configure(api_key='AIzaSyCf56sWSE9-gYwwb7KG1B0-6b2sVXjIWf4')"
+    "gmaps.configure(api_key='Insert API Key')"
    ]
   },
   {
