--- a/student.ipynb
+++ b/student.ipynb
@@ -9214,7 +9214,7 @@
    ],
    "source": [
     "# View list\n",
-    "address"
+    "# address"
    ]
   },
   {
@@ -9454,7 +9454,7 @@
    ],
    "source": [
     "# View new list\n",
-    "addy"
+    "# addy"
    ]
   },
   {
@@ -13018,7 +13018,7 @@
    ],
    "source": [
     "# View our new list\n",
-    "print(day_sold)\n",
+    "# print(day_sold)\n",
     "# Confirm day_sold is a list\n",
     "print(type(day_sold))"
    ]
@@ -42249,13 +42249,6 @@
     " - The model overestimated 15.13% house prices by over 100,000\n",
     " - 83.9% of the variations in price 𝑦 are explained by the features in our model."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
